fix: handle query params and whitespace in css-urls
After this change, it is no longer to problem to have whitespace
and/or query parameters in CSS-URLs like:

url('./fonts/Roboto/roboto-v29-latin-ext_latin-regular.woff2?v=1.12') format('woff2')
url('./fonts/Roboto/roboto-v29-latin ext_latin-regular.woff2?v=1.12') format('woff2')
url('./fonts/Roboto/roboto-v29-latin ext_latin-regular.woff2') format('woff2')

After this change, something still strips the query parameter away but now it is not failing anymore.

Partly fixes #12287

--- a/flow-tests/test-application-theme/reusable-theme/src/main/resources/META-INF/resources/themes/reusable-theme/styles.css
+++ b/flow-tests/test-application-theme/reusable-theme/src/main/resources/META-INF/resources/themes/reusable-theme/styles.css
@@ -5,6 +5,15 @@
     src: url("./font/ostrich-sans-regular.ttf") format("TrueType");
 }
 
+/* Font URL with whitespace character & query parameters */
+@font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    src: local(''),
+    url('./font/roboto v29-latin-ext_latin-regular.woff2?v=1.12') format('woff2')
+}
+
 body {
     background-image: url("./img/bg.jpg");
     font-family: "Ostrich";
@@ -24,3 +33,8 @@ body {
     height: 224px;
     display: block;
 }
+
+#roboto {
+    font-family: Roboto
+}
+
